--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark">
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -14,6 +16,8 @@
   </head>
   <body class="page">
     <header class="header">
+      <div class="header__logo"><p>&lt;/HTML&gt;</p></div>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -40,7 +44,99 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="content">
+      <article class="content__card">
+        <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <div class="card__image__box">
+          <img class="card__image" src="./images/image.png" alt="картинка с изображением автомобиля">
+          <span class="card__image-label">&lt;/HTML&gt;</span>
+        </div>
+        <div class="card__content">
+          <p class="card__content-text">
+            Это было самое начало пути. На этом этапе важно
+            было проникнуться основами и настроиться на учёбу.
+            И, возможно, подумать, как новые знания могут повлиять
+            на ваше будущее.
+          </p>
+          <p class="card__content-text">
+            Место для ваших воспоминаний о начале обучения.
+          </p>
+        </div>
+        <div class="card_like-section">
+          <button class="card__icon-button">
+            <svg 
+              class="like-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none">
+              <path d="M6 0H3V3H6V0Z"/>
+              <path d="M9 0H6V3H9V0Z"/>
+              <path d="M3 3H0V6H3V3Z"/>
+              <path d="M3 6H0V9H3V6Z"/>
+              <path d="M3 9H0V12H3V9Z"/>
+              <path d="M12 0H9V3H12V0Z"/>
+              <path d="M6 12H3V15H6V12Z"/>
+              <path d="M9 15H6V18H9V15Z"/>
+              <path d="M12 18H9V21H12V18Z"/>
+              <path d="M21 0H24V3H21V0Z"/>
+              <path d="M18 0H21V3H18V0Z"/>
+              <path d="M24 3H27V6H24V3Z"/>
+              <path d="M24 6H27V9H24V6Z"/>
+              <path d="M24 9H27V12H24V9Z"/>
+              <path d="M15 0H18V3H15V0Z"/>
+              <path d="M21 12H24V15H21V12Z"/>
+              <path d="M18 15H21V18H18V15Z"/>
+              <path d="M15 18H18V21H15V18Z"/>
+              <path d="M15 3H12V6H15V3Z"/>
+              <path d="M15 21H12V24H15V21Z"/>
+            </svg>
+          </button>
+          <button class="card__like-button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <button class="save-button">
+        <div class="save-button-icon">
+          <svg viewBox="0 0 40 40">
+            <use href="#floppy">
+          </svg>
+        </div>
+        <span class="button__text">Сохранить на память</span>
+      </button>
+    </footer>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
+
+<svg
+  xmlns="./svg/floppy.svg"
+  width="39"
+  height="39"
+  fill="none">
+  <symbol id="floppy"
+    stroke="currentColor"
+    fill="currentColor"
+  >
+    <g>
+      <path d="M0 0h3v3H0zM0 3h3v3H0zM0 6h3v3H0zM0 9h3v3H0zM0 12h3v3H0zM0 15h3v3H0zM0 18h3v3H0zM0 21h3v3H0zM0 24h3v3H0zM0 27h3v3H0zM0 30h3v3H0zM0 33h3v3H0zM0 36h3v3H0zM33 0v3h-3V0z"/>
+      <path d="M30.003 0v3h-3V0zM27 0v3h-3V0zM24 0v3h-3V0zM20.999 0v3h-3V0z"/>
+      <path d="M18 0v3h-3V0zM14.999 0v3h-3V0z"/>
+      <path d="M12 0v3H9V0zM8.996 0v3h-3V0z"/>
+      <path d="M6 0v3H3V0zM36 3v3h-3V3zM8.996 6v3h-3V6zM8.996 3v3h-3V3zM8.996 9v3h-3V9zM30.003 6v3h-3V6zM30.003 3v3h-3V3zM30.003 9v3h-3V9zM24 6v3h-3V6zM24 3v3h-3V3zM24 9v3h-3V9zM30.003 12v3h-3v-3zM27 12v3h-3v-3zM24 12v3h-3v-3zM20.999 12v3h-3v-3z"/>
+      <path d="M18 12v3h-3v-3zM14.999 12v3h-3v-3z"/>
+      <path d="M12 12v3H9v-3zM8.996 12v3h-3v-3zM33 21v3h-3v-3z"/>
+      <path d="M30.003 21v3h-3v-3zM27 21v3h-3v-3zM24 21v3h-3v-3zM20.999 21v3h-3v-3z"/>
+      <path d="M18 21v3h-3v-3zM14.999 21v3h-3v-3z"/>
+      <path d="M12 21v3H9v-3zM8.996 21v3h-3v-3zM33 24v3h-3v-3zM8.996 24v3h-3v-3zM33 27v3h-3v-3zM8.996 27v3h-3v-3zM33 30v3h-3v-3zM8.996 30v3h-3v-3zM8.996 33v3h-3v-3zM33 33v3h-3v-3zM36 36v3h-3v-3zM33 36v3h-3v-3z"/>
+      <path d="M30.003 36v3h-3v-3zM27 36v3h-3v-3zM24 36v3h-3v-3zM20.999 36v3h-3v-3z"/>
+      <path d="M18 36v3h-3v-3zM14.999 36v3h-3v-3z"/>
+      <path d="M12 36v3H9v-3zM8.996 36v3h-3v-3z"/>
+      <path d="M6 36v3H3v-3zM39 39h-3v-3h3zM39 36h-3v-3h3zM39 33h-3v-3h3zM39 30h-3v-3h3zM39 27h-3v-3h3zM39 24h-3v-3h3zM39 21h-3v-3h3zM39 18h-3v-3h3zM39 15h-3v-3h3zM39 12h-3V9h3zM39 9h-3V6h3z"/>
+    </g>
+  </symbol>
+</svg>
