--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <p>Вставьте дискету, чтобы продолжить</p>
       </div>
-      <button class="dialog__button"
+      <button class="dialog__button anim-button"
         type="button" 
         onclick="window['dialog'].close()">
         <span class="button__text">OK</span>
       </button>
     </dialog>
-    <header class="header">
+    <header class="header adaptive-width">
       <div class="header__logo"><p>&lt;/HTML&gt;</p></div>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
@@ -59,7 +59,7 @@
         </ul>
       </nav>
     </header>
-    <main class="content">
+    <main class="content adaptive-width">
       <article class="content__card">
         <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
         <div class="card__image__box">
@@ -93,14 +93,14 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button anim-button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
     </main>
-    <footer class="footer">
-      <button class="save-button"
+    <footer class="footer adaptive-width">
+      <button class="save-button anim-button"
         type="button" 
         onclick="window['dialog'].showModal()" 
         aria-controls="dialog">
@@ -112,28 +112,28 @@
         <span class="button__text">Сохранить на память</span>
       </button>
     </footer>
-    <script src="./scripts/like.js"></script>
     <svg class="visually-hidden"
-  xmlns="./svg/floppy.svg"
-  stroke="currentColor"
-  fill="currentColor">
-  <symbol id="floppy">
-    <path d="M0 0h3v3H0zM0 3h3v3H0zM0 6h3v3H0zM0 9h3v3H0zM0 12h3v3H0zM0 15h3v3H0zM0 18h3v3H0zM0 21h3v3H0zM0 24h3v3H0zM0 27h3v3H0zM0 30h3v3H0zM0 33h3v3H0zM0 36h3v3H0zM33 0v3h-3V0z"/>
-    <path d="M30.003 0v3h-3V0zM27 0v3h-3V0zM24 0v3h-3V0zM20.999 0v3h-3V0z"/>
-    <path d="M18 0v3h-3V0zM14.999 0v3h-3V0z"/>
-    <path d="M12 0v3H9V0zM8.996 0v3h-3V0z"/>
-    <path d="M6 0v3H3V0zM36 3v3h-3V3zM8.996 6v3h-3V6zM8.996 3v3h-3V3zM8.996 9v3h-3V9zM30.003 6v3h-3V6zM30.003 3v3h-3V3zM30.003 9v3h-3V9zM24 6v3h-3V6zM24 3v3h-3V3zM24 9v3h-3V9zM30.003 12v3h-3v-3zM27 12v3h-3v-3zM24 12v3h-3v-3zM20.999 12v3h-3v-3z"/>
-    <path d="M18 12v3h-3v-3zM14.999 12v3h-3v-3z"/>
-    <path d="M12 12v3H9v-3zM8.996 12v3h-3v-3zM33 21v3h-3v-3z"/>
-    <path d="M30.003 21v3h-3v-3zM27 21v3h-3v-3zM24 21v3h-3v-3zM20.999 21v3h-3v-3z"/>
-    <path d="M18 21v3h-3v-3zM14.999 21v3h-3v-3z"/>
-    <path d="M12 21v3H9v-3zM8.996 21v3h-3v-3zM33 24v3h-3v-3zM8.996 24v3h-3v-3zM33 27v3h-3v-3zM8.996 27v3h-3v-3zM33 30v3h-3v-3zM8.996 30v3h-3v-3zM8.996 33v3h-3v-3zM33 33v3h-3v-3zM36 36v3h-3v-3zM33 36v3h-3v-3z"/>
-    <path d="M30.003 36v3h-3v-3zM27 36v3h-3v-3zM24 36v3h-3v-3zM20.999 36v3h-3v-3z"/>
-    <path d="M18 36v3h-3v-3zM14.999 36v3h-3v-3z"/>
-    <path d="M12 36v3H9v-3zM8.996 36v3h-3v-3z"/>
-    <path d="M6 36v3H3v-3zM39 39h-3v-3h3zM39 36h-3v-3h3zM39 33h-3v-3h3zM39 30h-3v-3h3zM39 27h-3v-3h3zM39 24h-3v-3h3zM39 21h-3v-3h3zM39 18h-3v-3h3zM39 15h-3v-3h3zM39 12h-3V9h3zM39 9h-3V6h3z"/>
-  </symbol>
-</svg>
+      xmlns="./svg/floppy.svg"
+      stroke="currentColor"
+      fill="currentColor">
+      <symbol id="floppy">
+        <path d="M0 0h3v3H0zM0 3h3v3H0zM0 6h3v3H0zM0 9h3v3H0zM0 12h3v3H0zM0 15h3v3H0zM0 18h3v3H0zM0 21h3v3H0zM0 24h3v3H0zM0 27h3v3H0zM0 30h3v3H0zM0 33h3v3H0zM0 36h3v3H0zM33 0v3h-3V0z"/>
+        <path d="M30.003 0v3h-3V0zM27 0v3h-3V0zM24 0v3h-3V0zM20.999 0v3h-3V0z"/>
+        <path d="M18 0v3h-3V0zM14.999 0v3h-3V0z"/>
+        <path d="M12 0v3H9V0zM8.996 0v3h-3V0z"/>
+        <path d="M6 0v3H3V0zM36 3v3h-3V3zM8.996 6v3h-3V6zM8.996 3v3h-3V3zM8.996 9v3h-3V9zM30.003 6v3h-3V6zM30.003 3v3h-3V3zM30.003 9v3h-3V9zM24 6v3h-3V6zM24 3v3h-3V3zM24 9v3h-3V9zM30.003 12v3h-3v-3zM27 12v3h-3v-3zM24 12v3h-3v-3zM20.999 12v3h-3v-3z"/>
+        <path d="M18 12v3h-3v-3zM14.999 12v3h-3v-3z"/>
+        <path d="M12 12v3H9v-3zM8.996 12v3h-3v-3zM33 21v3h-3v-3z"/>
+        <path d="M30.003 21v3h-3v-3zM27 21v3h-3v-3zM24 21v3h-3v-3zM20.999 21v3h-3v-3z"/>
+        <path d="M18 21v3h-3v-3zM14.999 21v3h-3v-3z"/>
+        <path d="M12 21v3H9v-3zM8.996 21v3h-3v-3zM33 24v3h-3v-3zM8.996 24v3h-3v-3zM33 27v3h-3v-3zM8.996 27v3h-3v-3zM33 30v3h-3v-3zM8.996 30v3h-3v-3zM8.996 33v3h-3v-3zM33 33v3h-3v-3zM36 36v3h-3v-3zM33 36v3h-3v-3z"/>
+        <path d="M30.003 36v3h-3v-3zM27 36v3h-3v-3zM24 36v3h-3v-3zM20.999 36v3h-3v-3z"/>
+        <path d="M18 36v3h-3v-3zM14.999 36v3h-3v-3z"/>
+        <path d="M12 36v3H9v-3zM8.996 36v3h-3v-3z"/>
+        <path d="M6 36v3H3v-3zM39 39h-3v-3h3zM39 36h-3v-3h3zM39 33h-3v-3h3zM39 30h-3v-3h3zM39 27h-3v-3h3zM39 24h-3v-3h3zM39 21h-3v-3h3zM39 18h-3v-3h3zM39 15h-3v-3h3zM39 12h-3V9h3zM39 9h-3V6h3z"/>
+      </symbol>
+    </svg>
+    <script src="./scripts/like.js"></script>
   </body>
 </html>
 
