--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       </button>
     </footer>
     <svg class="visually-hidden"
-      src="./svg/floppy.svg"
+      xmlns="http://www.w3.org/2000/svg"
       stroke="currentColor"
       fill="currentColor">
       <symbol id="floppy">
