--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <p>Вставьте дискету, чтобы продолжить</p>
       </div>
-      <form action="" method="dialog">
+      <form action="#0" method="dialog">
         <button class="dialog__button anim-button"
           type="submit" 
           onclick="window['dialog'].close()">
@@ -350,7 +350,7 @@
       <article class="content__card">
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__image__box">
-          <img class="card__image card__image_filter-brightness card__image_filter-saturate" src="./images/image.png" alt="картинка с изображением автомобиля">
+          <img class="card__image card__image_filter-brightness-saturate" src="./images/image.png" alt="картинка с изображением автомобиля">
           <span class="card__image-label">&lt;/HTML&gt;</span>
         </div>
         <div class="card__content">
@@ -388,8 +388,6 @@
           </button>
         </div>
       </article>
-    </main>
-    <footer class="footer adaptive-width">
       <button class="save-button anim-button"
           type="button" 
           onclick="window['dialog'].showModal()" 
@@ -399,7 +397,7 @@
         </svg>
         <span class="button__text">Сохранить на&nbsp;память</span>
       </button>
-    </footer>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
