--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </form>
     </dialog>
     <header class="header adaptive-width">
-      <a class="header__logo">&lt;/HTML&gt;</a>
+      <a class="header__logo" href="#0">&lt;/HTML&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
